| Summary: | ASTERISK-25934: chan_sip should not require sipregs or updateable sippeers table unless rt | ||
| Reporter: | Jaco Kroon (jkroon) | Labels: | |
| Date Opened: | 2016-04-17 15:37:12 | Date Closed: | 2016-04-18 11:05:56 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Channels/chan_sip/DatabaseSupport |
| Versions: | Frequency of Occurrence | ||
| Related Issues: | |||
| Environment: | asterisk 11 - confirmed to still be an issue in master by code inspection. | Attachments: | |
| Description: | chan_sip calls ast_realtime_require_field in order to verify the fields in sipregs (or sippeers in absence of sipregs) in order to verify that a bunch of fields exists in it. This is not required unless rtupdate=yes (which happens to be the default but kills our performance and due to our table structure there is no trivial way to make it writable -- a single row can represent multiple actual sip peers, even the sipregs table unless ARA can learn to insert new rows is problematic). | ||
| Comments: | By: Asterisk Team (asteriskteam) 2016-04-17 15:37:13.390-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. | ||